# anki-decks-creator

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/core/: config.py  log.py
app/models/: anki_cards.py  anki_models.py  domain.py  registry.py
app/services/: audio_generator_service.py  builder_service.py  image_generator_service.py  image_search_service.py  loader_service.py
media/prompts/: grammar.md  numbers.md  verbs.md  verbs_cloze.md  vocabulary.md
