[project]
name = "anki"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs[pyaudio]>=2.35.0",
    "epitran>=1.34.0",
    "genanki>=0.13.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "typer>=0.24.0",
]
